logs/django-rosetta-inpage.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_rosetta-0.6.8.egg-info'...
Listing './lib/python3.5/site-packages/django_rosetta_inpage-0.0.10.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rosetta'...
Listing './lib/python3.5/site-packages/rosetta/conf'...
Listing './lib/python3.5/site-packages/rosetta/locale'...
Listing './lib/python3.5/site-packages/rosetta/locale/cs'...
Listing './lib/python3.5/site-packages/rosetta/locale/cs/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/rosetta/locale/de'...
Listing './lib/python3.5/site-packages/rosetta/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/rosetta/locale/es'...
Listing './lib/python3.5/site-packages/rosetta/locale/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/rosetta/locale/fr'...
Listing './lib/python3.5/site-packages/rosetta/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/rosetta/locale/hu'...
Listing './lib/python3.5/site-packages/rosetta/locale/hu/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/rosetta/locale/it'...
Listing './lib/python3.5/site-packages/rosetta/locale/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/rosetta/locale/nl'...
Listing './lib/python3.5/site-packages/rosetta/locale/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/rosetta/locale/pl'...
Listing './lib/python3.5/site-packages/rosetta/locale/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/rosetta/locale/ru'...
Listing './lib/python3.5/site-packages/rosetta/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/rosetta/locale/tr'...
Listing './lib/python3.5/site-packages/rosetta/locale/tr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/rosetta/locale/uk'...
Listing './lib/python3.5/site-packages/rosetta/locale/uk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/rosetta/locale/xx'...
Listing './lib/python3.5/site-packages/rosetta/locale/xx/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/rosetta/templates'...
Listing './lib/python3.5/site-packages/rosetta/templates/rosetta'...
Listing './lib/python3.5/site-packages/rosetta/templates/rosetta/css'...
Listing './lib/python3.5/site-packages/rosetta/templates/rosetta/js'...
Listing './lib/python3.5/site-packages/rosetta/templatetags'...
Listing './lib/python3.5/site-packages/rosetta/tests'...
Listing './lib/python3.5/site-packages/rosetta_inpage'...
Listing './lib/python3.5/site-packages/rosetta_inpage/static'...
Listing './lib/python3.5/site-packages/rosetta_inpage/static/rosetta_inpage'...
Listing './lib/python3.5/site-packages/rosetta_inpage/static/rosetta_inpage/.sass-cache'...
Listing './lib/python3.5/site-packages/rosetta_inpage/static/rosetta_inpage/.sass-cache/54ce692b105b96aab41a119b589956942ad04086'...
Listing './lib/python3.5/site-packages/rosetta_inpage/static/rosetta_inpage/css'...
Listing './lib/python3.5/site-packages/rosetta_inpage/static/rosetta_inpage/img'...
Listing './lib/python3.5/site-packages/rosetta_inpage/static/rosetta_inpage/img/glyphicons'...
Listing './lib/python3.5/site-packages/rosetta_inpage/static/rosetta_inpage/js'...
Listing './lib/python3.5/site-packages/rosetta_inpage/static/rosetta_inpage/sass'...
Listing './lib/python3.5/site-packages/rosetta_inpage/templates'...
Listing './lib/python3.5/site-packages/rosetta_inpage/templates/rosetta_inpage'...
Listing './lib/python3.5/site-packages/rosetta_inpage/tests'...
Compiling './lib/python3.5/site-packages/rosetta_inpage/views.py'...
***   File "./lib/python3.5/site-packages/rosetta_inpage/views.py", line 87
    print traceback.format_exc()
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
